# coreset-sc

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  api.html  example.py  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  usage.html
.github/workflows/: CI.yml  pypi.yml  release.yml
_modules/: coreset_sc.html  index.html
_modules/coreset_sc/: csc.html
_sources/: api.rst.txt  index.rst.txt  usage.rst.txt
benches/: sbm.rs
docs/: conf.py  installation.rst  usage.rst
docs/source/: coreset_sc.rst  modules.rst
python/coreset_sc/: __init__.py  csc.py  utils.py
source/: coreset_sc.html  modules.html
src/: lib.rs  rust.rs  sbm.rs
src/coreset/: common.rs  full.rs  mod.rs  old.rs  sampling_tree.rs  unstable.rs
tests/: test_dummy.py
