[package]
name = "coreset-sc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "coreset_sc"
crate-type = ["cdylib"]

[features]
default = []
bindings = ["pyo3"]


[dependencies]
rand =  "0.8.5"
pyo3 = {version = "0.22.5", optional = true, features = ["extension-module"]}
faer = "0.19.4"
numpy = "0.22.0"
ndarray = "0.16.1"

[profile.dev]
incremental = true
