[package]
name = "coreset-sc"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "coreset_sc"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"




[dependencies]
ndarray = "0.16.1"
rand =  "0.9.1"
rand_old = {version = "0.8.5", package = "rand"}
pyo3 = {version = "0.24.2", features = ["extension-module"]}
faer = { version = "0.19.4", features = ["rayon"] }
numpy = "0.24.0"

sampling-tree = "0.1.0"
rand_distr = "0.5.1"
criterion = "0.5.1"
rayon = "1.10.0"


faer-ext = { version = "0.3.0", features = ["ndarray"] }
ndarray-rand = "0.15.0"


[workspace]
resolver = "2"

[profile.dev]
incremental = true



[profile.release]
debug = true


[lints.clippy]
deprecated = "allow"


[[bench]]
name = "sbm"
harness = false
